--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 05 20:37:44 CET 2016
-sdk.dir=/home/jeroen/Android/Sdk
+#Wed Jan 06 19:17:53 CET 2016
+sdk.dir=C\:\\Users\\Michel\\AppData\\Local\\Android\\sdk
